Kubernates/manifest/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/admin:v1
          ports:
            - containerPort: 3000
