Kubernates/manifest/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  namespace: analytics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/analytics:v1
          ports:
            - containerPort: 3001
