Kubernates/manifest/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/auth:v1
          ports:
            - containerPort: 3002
