Kubernates/manifest/billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
  namespace: billing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/billing:v1
          ports:
            - containerPort: 3003
