Kubernates/manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/frontend:v1
          ports:
            - containerPort: 3004
