Kubernates/manifest/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: notifications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/notifications:v1
          ports:
            - containerPort: 3005
