Kubernates/manifest/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/payment:v1
          ports:
            - containerPort: 3006
