Kubernates/manifest/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: 495599739945.dkr.ecr.us-east-1.amazonaws.com/user:v1
          ports:
            - containerPort: 3007
