Kubernates/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: a2562f36ef712427cbc64a954dcd0e80-736605678.us-east-1.elb.amazonaws.com  # Replace with your domain or remove for IP access
      http:
        paths:
          - path: /manifest
            pathType: Prefix
            backend:
              service:
                name: microservice
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: microservice
                port:
                  number: 8080
